--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -39,25 +39,25 @@
       <img src="{% static 'images/whiskey-collection.jpg' %}" alt="Whiskey Collection" />
       <h3>Whiskey</h3>
       <p>Experience the finest selection of aged whiskey.</p>
-      <a href="{% url 'whiskey' %}" class="btn btn-secondary">See Collection</a>
+      <a href="{% url 'product_list' category='whiskey' %}" class="btn btn-secondary">See Collection</a>
     </div>
     <div class="category">
       <img src="{% static 'images/gin-collection.jpg' %}" alt="Gin Collection" />
       <h3>Gin</h3>
       <p>Explore our range of botanically infused gins.</p>
-      <a href="{% url 'gin' %}" class="btn btn-secondary">See Collection</a>
+      <a href="{% url 'product_list' category='gin' %}" class="btn btn-secondary">See Collection</a>
     </div>
     <div class="category">
       <img src="{% static 'images/vodka-collection.jpg' %}" alt="Vodka Collection" />
       <h3>Vodka</h3>
       <p>Discover smooth and refined premium vodkas.</p>
-      <a href="{% url 'vodka' %}" class="btn btn-secondary">See Collection</a>
+      <a href="{% url 'product_list' category='vodka' %}" class="btn btn-secondary">See Collection</a>
     </div>
     <div class="category">
       <img src="{% static 'images/wine-collection.jpg' %}" alt="Wine Collection" />
       <h3>Wine</h3>
       <p>Enjoy a curated selection of world-class wines.</p>
-      <a href="{% url 'wine' %}" class="btn btn-secondary">See Collection</a>
+      <a href="{% url 'product_list' category='wine' %}" class="btn btn-secondary">See Collection</a>
     </div>
   </div>
 </section>
