--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
-                                    <a href="{% url 'dashboard' %}" class="dropdown-item">Project Management</a>
+                                    <a href="{% url 'dashboard' %}" class="dropdown-item">My Cart</a>
                                 {% endif %}
                                 <a href="#" class="dropdown-item">My Profile</a>
                                 <form action="{% url 'logout' %}" method="post" class="dropdown-item">
@@ -103,22 +103,52 @@
     {% block content %}{% endblock %}
 
     <!-- Footer -->
-    <footer class="text-center text-light p-3 bg-black">
-        <div class="footer-social">
-            <a href="https://youtube.com/" target="_blank" rel="noopener" aria-label="Go to our Youtube page (opens in a new tab)">
-                <i class="fa-brands fa-square-youtube"></i>
-            </a>
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Go to our Facebook page (opens in a new tab)">
-                <i class="fa-brands fa-square-facebook"></i>
-            </a>
-            <a href="https://instagram.com/" target="_blank" rel="noopener" aria-label="Go to our Instagram page (opens in a new tab)">
-                <i class="fa-brands fa-square-instagram"></i>
-            </a>
-            <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Go to our Twitter page (opens in a new tab)">
-                <i class="fa-brands fa-square-x-twitter"></i>
-            </a>
+    <footer class="footer bg-black text-light py-4">
+        <div class="container">
+            <div class="row">
+                <!-- Contact Section -->
+                <div class="col-md-4 text-center text-md-start mb-3">
+                    <h4 class="footer-title">Contact Us</h4>
+                    <p>Email: info@sipoutloud.com</p>
+                    <p>Phone: +353 456 7890</p>
+                    <p>Address: 542 Savanna St, Tralee, Ireland</p>
+                </div>
+    
+                <!-- Newsletter Subscription -->
+                <div class="col-md-4 text-center mb-3">
+                    <h4 class="footer-title">Stay Updated</h4>
+                    <form action="/subscribe" method="POST" class="d-flex flex-column align-items-center">
+                        {% csrf_token %}
+                        <input type="email" name="email" class="form-control rounded-pill w-75" placeholder="Your Email" required>
+                        <button type="submit" class="btn btn-gold rounded-pill mt-2 px-4">Subscribe</button>
+                    </form>
+                </div>
+    
+                <!-- Social Media Links -->
+                <div class="col-md-4 text-center text-md-end mb-3">
+                    <h4 class="footer-title">Follow Us</h4>
+                    <div class="social-icons">
+                        <a href="https://youtube.com/" target="_blank" rel="noopener" class="social-link">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a>
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener" class="social-link">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="https://instagram.com/" target="_blank" rel="noopener" class="social-link">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="https://twitter.com/" target="_blank" rel="noopener" class="social-link">
+                            <i class="fa-brands fa-x-twitter"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+    
+            <!-- Copyright -->
+            <div class="text-center mt-3">
+                <p class="m-0">&copy; 2025 Sip Out Loud. All rights reserved.</p>
+            </div>
         </div>
-        <p>&copy; 2025 Sip Out Loud. All rights reserved.</p>
     </footer>
     
     {% block corejs %}
